--- a/style.css
+++ b/style.css
@@ -5,26 +5,158 @@
     font-family: 'Poppins', sans-serif;
 }
 
-.cardContainer{
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
+
+html body {
+    font-size: 1.2rem;
+    padding: 0px;
+    margin: 0px;
+}
+.main{ 
     display: flex;
-    flex-direction: row;
+    justify-content: center;    
+    width: 100vw;    
+}
+
+
+.col1{
+   flex-grow: 1;
+   position: relative;
+   width: 60vw;
+   min-width: 345px;
+   height: 100vh;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   background: linear-gradient(09deg, rgb(161, 129, 87), white);
+
+    
+}
+.col1 img{
+    max-width: 400px;
+    width: 100%;
+
+}
+
+.col2 {
+    display: flex;
+    width: 60vw;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(135deg, blue, lightblue);
+    flex-grow: 2;
+    background-color: rgb(234, 231, 231);
+
 }
 
-.cardBackground {
-    display: grid;
-    grid-template-columns: calc(100%-60) auto;
-    height: 100vh;
-    width: 100%;
-    overflow: hidden;
-    background-color: rgb(200, 203, 223);
+.header{
+    margin-bottom: 30px;
 }
 
-.formContainer{
-    max-width: 700px;
+.col2 h2{
+    font-weight: 600;
+    text-align: center;
+    padding-bottom: 1rem;
+};
+
+.col2 span {
+    font-size: 12px
+}
+
+.col2 a {
+    text-decoration: none;
+    color: #1930dd;
+    font-weight: 500;
+}
+
+.googleLink{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    border-radius: 4px;
+    border: 1px solid #706c6e;
+    text-decoration: none;
+    color: #555;
+    font-size: 13px;
+    margin: 20px 0;
+}
+
+.googleLink img {
+    width: 20px;
+    margin-right: 10px;
+}
+
+.col2 h4{
+    text-align: center;
+    font-weight: 400;
+    margin-bottom: 5px;
+}
+
+.inputSection {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    background-color: white;
+    padding: 2rem 2vw 1rem 2vw;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.123);
+    width: 90%;
+    border: 0%;
+    border-radius: 10px;
+}
+
+.inputSection span {
+   text-align: center;
+}
+
+form{
+    display: flex;
+    flex-flow: row wrap;
+    gap: 1rem;
+    font-size: 1rem;
+    justify-content: space-between;
     width: 100%;
-    padding: 25px 30px;
+}
+
+label {
+    position: relative;
+    width: 15rem;
+    margin-bottom: 15px;
+}
+input {
+    padding: 10px;
+    border-radius: 4px;
+    border: 1px solid #706c6e;
+    min-width: 200px;
+    width: 100%;
+}
+
+input, label {
+    display: block;
+}
+
+.submitSection {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding: 20px
+}
+
+.submitSection button {
+    height: 40px;
+    background-color: rgb(145, 150, 148);
+    border: transparent;
     border-radius: 5px;
+
+}
+
+.submitSection p {
+padding-top: 10px;
+font-size: small;
 }
